docs: some more info added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studnet Site</title>
+    <title>Student Site</title>
 </head>
 <body>
-   Hi I am Chaitanya 
+   Hi I am Chaitanya.
+
+   I live in Jammu.
+   A complete beginner to coding. 
 </body>
 </html>
