added some details

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 
    I live in Jammu.
    A complete beginner to coding. 
+
+   I have learned HTML in school. I hope will pick that part up easily.
 </body>
 </html>
