--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 
    I live in Jammu.
    A complete beginner to coding. 
+
+   I have learned HTML in school. I hope will pick that part up easily.
+
+   I like to learn now trends like blockchain, programming etc. These have become my hobby.
 </body>
 </html>
